--- a/unit_4/memory_game/memory_style.css
+++ b/unit_4/memory_game/memory_style.css
@@ -1,6 +1,6 @@
 body {
-    height: 100vh;
-    background-color: rgb(255, 255, 255);
+   
+    background-color: rgb(207, 187, 5);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
   
@@ -8,7 +8,7 @@ body {
     font-size: 40px;
     color: rgb(179 98 28);
     margin: 0px;
-    position: relative;
+    
     text-align: center;
     background-color: rgb(38 38 38);
 }
@@ -19,6 +19,12 @@ body {
     height: 200px;
     margin: 10px;
     display: inline-block;
+    background-color: rgb(255, 255, 255);
   }
 
-
+.game_container{
+  border: 1px solid black;
+    text-align: center;
+    
+    background-color: rgb(32, 38, 75);
+}
