added code for sessions

--- a/unit_19/19.3_exercise/templates/questions.html
+++ b/unit_19/19.3_exercise/templates/questions.html
@@ -13,10 +13,11 @@
         <label for="choice1">{{choices[0]}}&nbsp;</label>
         <input type="radio" id="choice2" name="choice" value={{choices[1]}}>
         <label for="choice1">{{choices[1]}}</label><br>
-        <button>SUBMIT ANSWER</button>
+        <button id="submit_answer_btn">SUBMIT ANSWER</button>
    </form>
-
+   <script src="/static/questions.js"></script>
 </div>
+
 
 
 {%endblock%}
