--- a/unit_19/19.3_exercise/templates/endpage.html
+++ b/unit_19/19.3_exercise/templates/endpage.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div id="survey_start" class="survey_start_div">
    <h2>THANK YOU FOR THE SURVEY!!</h2>
-
+    <p>{{ qa_object }}</p>
    <P>Cheers!!</P>
     <a href="/"><button id="restart_survey_btn"> RETAKE SURVEY </button></a>
 </div>
