--- a/unit_19/19.3_exercise/templates/survey_form.html
+++ b/unit_19/19.3_exercise/templates/survey_form.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div id="survey_start" class="survey_start_div">
    <h2>{{ title }}</h2>
-    <form action="/questions/0">
+    <form action="/initiate" method="post">
         <P>{{ instructions }}</P>
         <button id="survey_start_btn"> BEGIN THE SURVEY </button>
 
