--- a/unit_23/templates/user-details.html
+++ b/unit_23/templates/user-details.html
@@ -1,15 +1,33 @@
 {% extends 'base.html' %}
 {% block content %}
   <h1>Blogger Details</h1>
-    <h2>{{user.first_name}} {{user.last_name}}</h2>
-    <div class="user_image">
-       <img src={{user.image_url}} alt=""> <br>
-       <a href="/users/{{user.id}}/edit"><button>Edit</button></a>
-       <a href="/users/{{user.id}}/delete"><button>Delete</button></a>
+  <div class="flex-container">
+    <div class="user_image_div flex-child">
+      <h2 style="margin-bottom: 10px;">{{user.first_name}} {{user.last_name}}</h2>
+      <img src={{user.image_url}} alt=""> <br>
+      
+      <a href="/users/{{user.id}}/edit"><button>Edit</button></a>
+      <a href="/users/{{user.id}}/delete"><button>Delete</button></a>
     </div>
 
+    <div class="post_div flex-child">
+      <div class="post-header">
+        <h2 style="margin-bottom: 10px;">POSTS</h2>
+        <a href="/users/{{user.id}}/posts/new"><button>Add Post</button></a>
+      </div>
+      <div class="post_list">
+        <ul>
+        {% for post in posts %}
+        <li><a href="/posts/{{post.id}}">{{post.title}}</a></li>
+        {% endfor %}
+        </ul>
+      </div>
 
 
+      
 
+      
+    </div>  
+</div>
 
 {%endblock%}
