--- a/unit_23/templates/user-list.html
+++ b/unit_23/templates/user-list.html
@@ -2,13 +2,15 @@
 {% block content %}
 
 <div class="userlistdiv">
-  <h1>USERS</h1>
+  <h1 style="top: 10px">USERS</h1>
+
   <ul>
     {% for user in users %}
     <li><a href="/{{user.id}}">{{user.first_name}}&nbsp;{{user.last_name}}</a></li>
     {% endfor %}
   </ul>
   <a href="/users/new"><button>Add User</button></a>
+
 
 </div>
 
