--- a/unit_23/templates/new-post-form.html
+++ b/unit_23/templates/new-post-form.html
@@ -4,12 +4,21 @@
 
 <div id="input_form_div" class="input_form_div">
     <form action="/users/{{user_id}}/posts/new" method="POST">
+        
         <p style="font-size: 20px">Hello there! Please enter the post details</p><br>
-        <label for="title">Title:&nbsp;</label><br>
+        <label for="title" >Title:&nbsp;</label><br>
         <input type="text" id="title" name="title" onfocus="this.value=''"><br>
 
         <label for="content">Content:&nbsp;</label><br>
         <input type="text" id="content" name="content" onfocus="this.value=''" style="width: 400px;height: 50pt;font-size: 15px;"><br>
+
+        <div class="tag_input_checkbox_div">
+            {% for tag in tags %}
+           
+            <label for="tagname" class ="form-control">{{tag.name}} <input type="checkbox" name=tagname value={{tag.id}}></label><br>
+            {% endfor %}
+        </div>
+
 
         <button id="add_user" type="submit">Save Post</button>
    </form>
