--- a/unit_23/templates/user-details.html
+++ b/unit_23/templates/user-details.html
@@ -8,6 +8,7 @@
       
       <a href="/users/{{user.id}}/edit"><button>Edit</button></a>
       <a href="/users/{{user.id}}/delete"><button>Delete</button></a>
+      <a href="/users"><button>Home</button></a>
     </div>
 
     <div class="post_div flex-child">
